@@ -1,12 +1,12 @@
 Package: Rmpi
-Version: 0.4-3
-Date: 2002-05-6
+Version: 0.4-4
+Date: 2002-06-01
 Title: Interface (Wrapper) to MPI (Message-Passing Interface)
 Author: Hao Yu
 Maintainer: Hao Yu <hyu@stats.uwo.ca>
 Depends: R (>= 1.5), serialize (>=0.2), and LAM-MPI (>= 6.5.6)
 Description: Rmpi provides an interface (wrapper) to MPI APIs. It also 
-	     provides interactive R slave functionalities to make MPI 
-	     programming easier in R than in C(++) or Fortran.
+	     provides interactive R slave environment in which 
+	     distributed statistical computing can be carried out.
 License: GPL version 2 or newer
 URL: http://www.stats.uwo.ca/faculty/yu/Rmpi
