@@ -41,7 +41,6 @@ lamhosts		Hosts id and machine host name mapping
 mpi.any.source		A constant for receiving a message from any source
 mpi.any.tag		A constant for receiving a message from any tag
 mpi.bcast.Robj		Broadcast an R object to every process
-mpi.comm.is.null	Test if a comm is null (no members)
 mpi.exit		Call MPI_Finalize and detach Rmpi library
 mpi.get.sourcetag	Get the source and tag for a given status
 mpi.hostinfo		Get the host information that the process is running
@@ -56,21 +55,20 @@ mpi.spawn.Rslaves	Spawn R slaves. The default R script is slavedaemon.R
 *****************************************************************************
 MPI Extensions specifically to slavedaemon.R Script (interactive R slaves). 
 
-getpid			Master process id, used for setting slave log files.
 mpi.bcast.Robj2slave	Master sends an Robj to all slaves
 mpi.bcast.cmd		Broadcast a commond to every process
 mpi.close.Rslaves	Close all slaves launched by mpi.spawn.Rslaves()
 mpi.remote.exec		Run a command remotely on slaves and return 
 			results back to the master 
-mpi.remote.slave	Counter part of mpi.remote.exec (used by slaves)
 slave.hostinfo		Show all slave rank, comm, host information
 tail.slave.log		Tail (view) last lines of slave log files
 *****************************************************************************
-Deprecated Functions
-mpi.bcast.recv.cmd	Replaced by mpi.bcast.cmd 
-mpi.bcast.send.cmd	Replaced by mpi.bcast.cmd
-mpi.bcast.recv.Robj	Replaced by mpi.bcast.Robj
-mpi.bcast.send.Robj	Replaced by mpi.bcast.Robj
-mpi.bcast.recv		Not needed
-mpi.bcast.send		Not needed
+Internal Functions used by Other MPI Functions
 
+bin.nchar		Find the length of a binary string
+getpid			Master process id, used for setting slave log files
+mpi.comm.is.null	Test if a comm is NULL (no members)
+mpi.remote.fun		Used by mpi.remote.exec for local variables passing
+mpi.remote.slave	Counter part of mpi.remote.exec (used by slaves)
+string			Create a string (empty space character) buffer
+typeindex		Identify an R object to type 1, 2, 3, or others
