@@ -156,7 +156,6 @@ Final note: It is extremely important that users should close R slaves
 .Last <- function(){
     if (is.loaded("mpi_initialize")){
         if (mpi.comm.size(1) > 0){
-            print("It seems some slaves running.")
 	    print("Please use mpi.close.Rslaves() to close slaves.")
             mpi.close.Rslaves(comm=1)
         }
