@@ -24,7 +24,7 @@ if (mpi.comm.rank(0) >0){
     while (1) {
     	try(eval(mpi.bcast.cmd(rank=0,comm=.comm),envir=sys.parent()))
     }
-    mpi.barrier(.comm)
+#    mpi.barrier(.comm)
     mpi.comm.free(.comm)
     mpi.quit()
 }
