@@ -15,12 +15,12 @@ mpi.init.sprng(seed = floor(runif(1, 1, 2147483648)),
 }
 \arguments{
   \item{seed}{an integer of random number seed.} 
-  \item{kindprng}{a character string of the disired kind of parallel
+  \item{kindprng}{a character string of the desired kind of parallel
     random number generator.}
   \item{para}{additional parameters for the parallel random number
     generators.  If \code{para} is 0, default parameters for each PRNG
     are used.  When invalid parameter is given, a warning is issued and
-    the default paramter is used.}
+    the default parameter is used.}
   \item{rank}{the sender who distributes seed, kindprng, para to other 
    members in a comm, i.e., other members' seed, kindprng, and para are 
    ignored.}
@@ -29,6 +29,13 @@ mpi.init.sprng(seed = floor(runif(1, 1, 2147483648)),
 \value{
   Return the a two-element character vector of the RNG and normal kinds
   in use before the call.
+}
+\section{Warning}{
+  When \code{sprng} is not used any more, please run 
+  \code{\link[rsprng]{free.sprng}} on all slaves and master to set back 
+  to R default RNG. If not doing so, an error message will come out like 
+  ".Random.seed[1] = 5 but no user-supplied generator" in the next 
+  session. One quick remedy is \code{rm(.Random.seed)}. 
 }
 \references{
   SPRNG: Scalable Parallel Random Number Generator Library Web Page.
